Fix small overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ span {
 @layer components {
   .sansHeading {
     font-family: Inter;
-    letter-spacing: -0.07em;
+    letter-spacing: -0.05em;
     font-weight: 600;
     line-height: 1.1;
     text-transform: uppercase;
